--- a/Caffio-test/CardView.xib
+++ b/Caffio-test/CardView.xib
@@ -1,15 +1,112 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6172" systemVersion="14A261f" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6185.11" systemVersion="14A314h" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6167"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6190.4"/>
+        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="CardView" customModule="Caffio_test" customModuleProvider="target">
+            <connections>
+                <outlet property="authorLabel" destination="csF-LU-yJf" id="7eX-dW-Bkf"/>
+                <outlet property="authorPhotoView" destination="i6T-ng-l2C" id="laN-z3-FXd"/>
+                <outlet property="categoryLabel" destination="xjR-c7-tQZ" id="ThO-3Q-DfF"/>
+                <outlet property="dateLabel" destination="rRP-UM-MxH" id="URc-xp-uN3"/>
+                <outlet property="fullImageView" destination="ad0-Jp-hl6" id="LQc-Fl-gl5"/>
+                <outlet property="labelsView" destination="iN0-l3-epB" id="Obb-Sc-j5l"/>
+                <outlet property="subtitleLabel" destination="1yY-8v-cbl" id="fwX-la-fHs"/>
+                <outlet property="titleLabel" destination="HFV-Nn-ZFg" id="dwl-H2-YvE"/>
+                <outlet property="upperImageView" destination="XcR-Or-sf6" id="Qsk-qU-aCI"/>
+            </connections>
+        </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="iN0-l3-epB">
-            <rect key="frame" x="0.0" y="0.0" width="480" height="480"/>
+            <rect key="frame" x="0.0" y="0.0" width="300" height="292"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+            <subviews>
+                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="XcR-Or-sf6">
+                    <rect key="frame" x="0.0" y="0.0" width="300" height="160"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="162" id="trx-5A-2oM"/>
+                    </constraints>
+                </imageView>
+                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="ad0-Jp-hl6">
+                    <rect key="frame" x="0.0" y="0.0" width="300" height="292"/>
+                    <constraints>
+                        <constraint firstAttribute="width" constant="300" id="WWz-gh-LzR"/>
+                    </constraints>
+                </imageView>
+                <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" text="Label" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="266" translatesAutoresizingMaskIntoConstraints="NO" id="1yY-8v-cbl">
+                    <rect key="frame" x="16" y="200" width="266" height="21"/>
+                    <fontDescription key="fontDescription" name="Helvetica" family="Helvetica" pointSize="12"/>
+                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                    <nil key="highlightedColor"/>
+                </label>
+                <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" text="Label" lineBreakMode="wordWrap" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="268" translatesAutoresizingMaskIntoConstraints="NO" id="HFV-Nn-ZFg">
+                    <rect key="frame" x="16" y="168" width="268" height="30"/>
+                    <fontDescription key="fontDescription" name="Helvetica" family="Helvetica" pointSize="18"/>
+                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                    <nil key="highlightedColor"/>
+                </label>
+                <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" usesAttributedText="YES" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xjR-c7-tQZ">
+                    <rect key="frame" x="16" y="12" width="268" height="21"/>
+                    <attributedString key="attributedText">
+                        <fragment content="Label">
+                            <attributes>
+                                <color key="NSColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                <font key="NSFont" size="14" name="Helvetica"/>
+                                <paragraphStyle key="NSParagraphStyle" alignment="left" lineBreakMode="wordWrapping" baseWritingDirection="natural"/>
+                            </attributes>
+                        </fragment>
+                    </attributedString>
+                    <nil key="highlightedColor"/>
+                </label>
+                <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rRP-UM-MxH">
+                    <rect key="frame" x="16" y="261" width="173" height="21"/>
+                    <fontDescription key="fontDescription" name="Helvetica" family="Helvetica" pointSize="13"/>
+                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                    <nil key="highlightedColor"/>
+                </label>
+                <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" usesAttributedText="YES" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="csF-LU-yJf">
+                    <rect key="frame" x="242" y="260" width="42" height="21"/>
+                    <attributedString key="attributedText">
+                        <fragment content="Label">
+                            <attributes>
+                                <color key="NSColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <font key="NSFont" size="13" name="Helvetica"/>
+                                <paragraphStyle key="NSParagraphStyle" alignment="left" lineBreakMode="wordWrapping" baseWritingDirection="natural"/>
+                            </attributes>
+                        </fragment>
+                    </attributedString>
+                    <nil key="highlightedColor"/>
+                </label>
+                <imageView userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="i6T-ng-l2C">
+                    <rect key="frame" x="207" y="255" width="27" height="27"/>
+                    <constraints>
+                        <constraint firstAttribute="width" constant="27" id="hTj-xe-P6n"/>
+                        <constraint firstAttribute="width" secondItem="i6T-ng-l2C" secondAttribute="height" multiplier="1:1" id="tbR-w4-3vi"/>
+                        <constraint firstAttribute="height" constant="24" id="z4x-2w-kGa"/>
+                    </constraints>
+                </imageView>
+            </subviews>
+            <color key="backgroundColor" white="1" alpha="0.0" colorSpace="custom" customColorSpace="calibratedWhite"/>
+            <constraints>
+                <constraint firstAttribute="trailing" secondItem="csF-LU-yJf" secondAttribute="trailing" constant="8" id="BTz-NQ-zIo"/>
+                <constraint firstAttribute="trailing" secondItem="XcR-Or-sf6" secondAttribute="trailing" id="HMh-d9-zVz"/>
+                <constraint firstItem="ad0-Jp-hl6" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="IOl-nh-a6X"/>
+                <constraint firstItem="csF-LU-yJf" firstAttribute="leading" secondItem="i6T-ng-l2C" secondAttribute="trailing" constant="5" id="IiA-Ek-v7Q"/>
+                <constraint firstItem="ad0-Jp-hl6" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="LbZ-Pw-Pxf"/>
+                <constraint firstItem="1yY-8v-cbl" firstAttribute="top" secondItem="HFV-Nn-ZFg" secondAttribute="bottom" constant="7" id="Par-p4-v0B"/>
+                <constraint firstAttribute="trailing" secondItem="1yY-8v-cbl" secondAttribute="trailing" constant="17" id="SaC-sh-cwo"/>
+                <constraint firstAttribute="trailing" secondItem="ad0-Jp-hl6" secondAttribute="trailing" id="WfS-lJ-n1P"/>
+                <constraint firstItem="XcR-Or-sf6" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="X6z-NU-NIN"/>
+                <constraint firstAttribute="bottom" secondItem="ad0-Jp-hl6" secondAttribute="bottom" id="YaL-or-8e5"/>
+                <constraint firstItem="1yY-8v-cbl" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="17" id="ZKy-s7-N4Q"/>
+                <constraint firstItem="i6T-ng-l2C" firstAttribute="leading" secondItem="rRP-UM-MxH" secondAttribute="trailing" constant="18" id="jTO-xT-GpP"/>
+                <constraint firstItem="XcR-Or-sf6" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="jY2-9e-SjV"/>
+                <constraint firstAttribute="bottom" secondItem="i6T-ng-l2C" secondAttribute="bottom" constant="10" id="neq-kk-4H6"/>
+            </constraints>
+            <nil key="simulatedStatusBarMetrics"/>
+            <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
         </view>
     </objects>
 </document>
